# rusty-ant

./: Cargo.toml  README.txt  cell.rs  colony.rs  coordinates.rs  direction.rs  input.rs  log.rs  main.rs  main.sh  make.sh  move.rs  point.rs  time.rs  wave.rs
src/: cell.rs  colony.rs  coordinates.rs  input.rs  log.rs  main.rs  step.rs  time.rs  wave.rs
