[package]
name = "rusty-ant"
version = "1.0.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
edition = "2018"

[dependencies]
rand = { version = "0.8", features = [ "small_rng" ] }

[profile.dev]
opt-level = 0
lto = false
debug = true
panic = "unwind"

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"
codegen-units = 1
